small textual changes across website

--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/ideation.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/ideation.html
@@ -727,7 +727,7 @@
     <div class="container">
         <div class="section-title">Takeaways</div>
         <div class="section-title-line blue-bg"></div>
-        <div class="smaller-section">Our team had developed mid-fi prototypes based on the generative research gathered previously. The prototypes included these ideas to address problems with overwhelming data analytics, need for trader customization, and lack of closure.</div>
+        <div class="smaller-section">Our team had developed mid-fi prototypes based on the generative research gathered previously. The prototypes included these ideas to address problems with overwhelming data analytics, need for trader customization, and lack of closure. Based on client feedback, the team decided to narrow our focus on the alert ecosystem as discussed in the next phase. </div>
         <!--card-->
         <div class="section">
             <div class="card card-style1">
@@ -741,7 +741,7 @@
                 <div class="ipad-bin">
                     <img src="images/ideation/learnings-icon.svg" alt="" class="card-icon-ipad">
                     <div class="h2">Learnings</div>
-                    <p class="paragraph-big">Our team discovered which research insights provide the most value to our client and adhere to their desire for our project.</p>
+                    <p class="paragraph-big">Our team discovered which research insights provide the most value to our client and lead to better alert systems for Liquidnet out of our project.</p>
                 </div>
             </div>
         </div>
