--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/index.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/index.html
@@ -66,11 +66,11 @@
                         <h2>MONTHS</h2>
                     </div>
                     <div class="project-numbers">
-                        <h1>10</h1>
-                        <h2>METHODS</h2>
+                        <h1>3</h1>
+                        <h2>PHASES</h2>
                     </div>
                     <div class="project-numbers">
-                        <h1>3</h1>
+                        <h1>11</h1>
                         <h2>CONCEPTS</h2>
                     </div>
                 </div>
